--- a/content/themes/archangel/assets/sass/input.scss
+++ b/content/themes/archangel/assets/sass/input.scss
@@ -645,14 +645,16 @@ blockquote {
 .about-card h2 {
   font-size: 30px;
   margin: 0 auto 20px;
-  flex: 100%;
   padding-bottom: 10px;
   border-bottom: 1px solid #333;
   text-align: center;
 }
 
-.about-card.vertical-card h2 {
+.about-card.horizontal-card h2 {
   flex: 100%;
+}
+
+.about-card.vertical-card h2 {
   width: 100%;
 }
 
